Fixed context menu position bug!! Scrolling object viewer
The context menu being rendered inside the container element caused the offset.

Show scrollbars on object/log viewer

Other minor UI improvements including button / hover styles, dataTable styles,

--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -4,11 +4,37 @@
 .inline-flex {
   display: inline-flex !important;
 }
+.flex-top {
+  flex: 1 0 auto;
+}
+.flex-bottom {
+  flex-shrink: 0;
+}
+.contain {
+  max-height: 85vh;
+  max-width: 100vw;
+}
+.scroll-x {
+  overflow-x: scroll;
+}
+.scroll-y {
+  overflow-y: scroll;
+}
 .fixed-bottom {
   position: fixed !important;
   bottom: 0 !important;
-  align-content: center;
-  margin-bottom: 0 !important;
+}
+.center-x {
+  margin-left: auto;
+  margin-right: auto;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.center-y {
+  margin-top: auto;
+  margin-bottom: auto;
+  top: 50%;
+  transform: translateY(50%);
 }
 .bg-white {
   background-color: #fff !important;
@@ -269,6 +295,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 html {
   box-sizing: border-box;
@@ -281,32 +308,41 @@ html {
 body {
   color: #222;
   font-size: 1.4rem;
+  display: flex;
+  flex-direction: column;
+}
+.container-fluid {
+  width: 100%;
+  flex: 1 0 auto;
 }
 .footer {
+  flex-shrink: 0;
   width: 100%;
   bottom: 0;
   right: 0;
   left: 0;
-  margin: 0;
+  margin-top: auto;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
   padding: 1rem;
   clear: both;
   background-color: #0cf;
   color: #fff;
-  display: inline-flex;
+  display: flex;
   justify-content: space-between;
 }
 .footer a {
   color: #fff;
 }
 .nav {
-  display: inline-flex;
+  display: flex;
   justify-content: space-between;
   width: 100%;
   margin: 0;
   padding: 2rem 1rem;
   background-color: #0cf;
   color: #fff;
-  vertical-align: middle;
   align-items: center;
 }
 .nav .navbar {
@@ -316,8 +352,10 @@ body {
 }
 .nav-item {
   display: inline-flex;
+  align-items: center;
   border-right: 2px solid #fff;
   color: #f5f5f5;
+  box-sizing: border-box;
   padding: 0 1.5rem;
   height: 100%;
 }
@@ -330,7 +368,6 @@ body {
 a.nav-item {
   color: #f5f5f5;
   text-decoration: none;
-  box-sizing: border-box;
   height: 100%;
   white-space: nowrap;
 }
@@ -400,6 +437,22 @@ a.nav-item.active {
 .process-form button:hover {
   border-color: #0e0e0e;
   opacity: 1;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled {
+  color: #fcfcfc;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current {
+  background: #eee;
+  border: 1px solid transparent;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+  background: #d6d6d6;
+  border: 1px solid transparent;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  color: #333 !important;
+  background: #eff2ff;
+  border: 1px solid transparent;
 }
 .grid-container {
   margin: 2rem 4rem;
@@ -888,13 +941,11 @@ input:focus +.slider {
   box-shadow: 0 0 1px #333;
 }
 .context_menu_show {
-  z-index: 1000;
   position: absolute;
   background-color: #333;
   border: 1px solid #ababaa;
   border-radius: 3px;
   padding: 1px;
-  display: block;
   margin: 0;
   list-style: none;
   color: #fff;
